--- a/db/events.yaml
+++ b/db/events.yaml
@@ -47,6 +47,18 @@ events:
     year: 1992
     type: trattato
     location: Paesi Bassi
+  1993-oslo-accords:
+    year: 1993
+    month: 9
+    type: trattato
+    location: Washington DC
+    outcome: Palestinian self-government
+  1995-assassinio-rabin:
+    year: 1995
+    month: 11
+    type: assassinio
+    location: Tel Aviv
+    outcome: Fine processo Oslo
   1999-abolizione-glass-steagall:
     year: 1999
     type: deregulation
