add thai power report

--- a/db/families.yaml
+++ b/db/families.yaml
@@ -135,6 +135,38 @@ families:
       role: governor-florida
     - person: george-p-bush
       generation: 5
+  chearavanont:
+    origin: Thailand
+    founder: chia-ek-chor
+    sector: agribusiness, telecommunications, retail
+    generations: 3
+    status: active
+    members:
+    - person: chia-ek-chor
+      generation: 1
+      role: founder
+    - person: dhanin-chearavanont
+      generation: 2
+      role: patriarch
+    - person: soopakij-chearavanont
+      generation: 3
+      role: chairman
+    - person: suphachai-chearavanont
+      generation: 3
+      role: ceo
+  chirathivat:
+    origin: Thailand
+    founder: tiang-chirathivat
+    sector: retail
+    status: active
+    members:
+    - person: tiang-chirathivat
+      generation: 1
+      role: founder
+    - person: tos-chirathivat
+      generation: 3
+    - person: samrit-chirathivat
+      generation: 2
   chung:
     origin: South Korea
     founder: Chung Ju-yung
@@ -475,6 +507,46 @@ families:
     - person: walter-rothschild
       generation: 3
       role: 2nd Baron Rothschild
+  shinawatra:
+    origin: Thailand
+    founder: thaksin-shinawatra
+    sector: telecommunications, politics
+    generations: 3
+    status: active
+    members:
+    - person: thaksin-shinawatra
+      generation: 1
+      role: founder
+    - person: yingluck-shinawatra
+      generation: 1
+      role: member
+    - person: paetongtarn-shinawatra
+      generation: 2
+      role: member
+  sirivadhanabhakdi:
+    origin: Thailand
+    founder: charoen-sirivadhanabhakdi
+    sector: beverages
+    status: active
+    members:
+    - person: charoen-sirivadhanabhakdi
+      generation: 1
+      role: founder
+    - person: thapana-sirivadhanabhakdi
+      generation: 2
+  sophonpanich:
+    origin: Thailand
+    founder: chin-sophonpanich
+    sector: banking
+    status: active
+    members:
+    - person: chin-sophonpanich
+      generation: 1
+      role: founder
+    - person: chartsiri-sophonpanich
+      generation: 3
+    - person: chatri-sophonpanich
+      generation: 2
   tata:
     origin: India
     founder: Jamsetji Tata
@@ -595,3 +667,19 @@ families:
     - person: william-wales
       generation: 5
       role: heir
+  yoovidhya:
+    origin: Thailand
+    founder: chaleo-yoovidhya
+    sector: beverages, energy drinks
+    generations: 3
+    status: active
+    members:
+    - person: chaleo-yoovidhya
+      generation: 1
+      role: founder
+    - person: chalerm-yoovidhya
+      generation: 2
+      role: heir
+    - person: saravoot-yoovidhya
+      generation: 2
+      role: member
